fixed the login button stretching the legth of the screen

--- a/client/src/features/components/Login/Login.css
+++ b/client/src/features/components/Login/Login.css
@@ -6,7 +6,7 @@
 }
 
 .login-form {
-    background-color: #f8f9fa;
+    background-color: #F1DEDA !important;;
     padding: 20px;
     text-align: center; 
     border-radius: 5px;
